# covertable

./: .editorconfig  .gitignore  LICENSE  README.md  README.rst  codecov.yml  heavy.pict
.circleci/: config.yml
.github/workflows/: docs.yaml  python.yaml  typescript.yaml
docs/: docusaurus.config.ts  package.json  pnpm-lock.yaml  sidebars.ts  tsconfig.json
docs/contents/: index.mdx
docs/contents/advanced/: constraint-logic.mdx  index.mdx  options.mdx  pict.mdx  shortcuts.mdx
docs/contents/development/: algorithm.mdx  constraint-logic.mdx  python.mdx  typescript.mdx
docs/contents/history/: index.mdx  migration.mdx  v1.mdx  v2.mdx  v3.mdx
docs/contents/reference/: options.mdx  pict.mdx
docs/contents/reference/shortcuts/: constraint.mdx
docs/contents/tools/: generate.worker.ts  pict-online.mdx  pict.tsx
docs/src/css/: custom.css
docs/src/pages/: about.mdx  privacy-policy.mdx
python/: .gitignore  README.rst  ci_requirements.txt  dev_requirements.txt  history.md  pyproject.toml  pytest.ini  setup.cfg  setup.py  test_pict.py  tests.py  tox.ini
python/ccovertable/: __init__.py  exceptions.pyx  main.pyx
python/ccovertable/sorters/: __init__.pyx  greedy.pyx  hash.pyx
python/covertable/: __init__.py  evaluate.py  exceptions.py  lib.py  main.py  shortcuts.py  utils.py
python/covertable/criteria/: __init__.py  greedy.py  minimal.py  simple.py
python/covertable/pict/: __init__.py  lexer.py  model.py  parser.py  weights.py
python/covertable/sorters/: __init__.py  greedy.py  hash.py  random.py  sequential.py
typescript/: .npmignore  README.md  history.md  jest.config.ts  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  tsconfig.test.json  tslint.json  vite.config.ts  webpack.config.js
typescript/src/: _bench.ts  controller.ts  evaluate.ts  exceptions.ts  index.ts  lib.ts  types.ts  utils.ts
typescript/src/__tests__/: bench.test.ts  contradictory.test.ts  coverage-bench.test.ts  custom-condition.test.ts  filter.test.ts  forward-check-complex.test.ts  forward-check-weakness.test.ts  forward-check.test.ts  heavy-coverage.test.ts  heavy-covertable.test.ts  index.test.ts  pict.test.ts  profile.test.ts  salt-sweep.test.ts  shortcuts.test.ts  simple-criterion.test.ts  typo-constraint.test.ts
typescript/src/criteria/: greedy.ts  index.ts  simple.ts
typescript/src/pict/: constraints.ts  index.ts  model.ts  parameters.ts  parse.ts  subModels.ts  types.ts  weights.ts
typescript/src/shortcuts/: index.ts
typescript/src/sorters/: greedy.ts  hash.ts  index.ts  random.ts  sequential.ts
typescript/src/utils/: pict.ts
typescript/tmp/: find_best_seed.ts
