[metadata]
name = covertable
version = 1.1.0
author = righ
author_email = righ.m9@gmail.com
url = https://github.com/walkframe/covertable/
license = Apache Software License
classifier = 
  Intended Audience :: Developers
  Intended Audience :: Information Technology
  Intended Audience :: Manufacturing
  Intended Audience :: Science/Research
  License :: OSI Approved :: Apache Software License
  Programming Language :: Python
  Topic :: Software Development
keywords = 
  allpair
  all-pair
  allpairs
  all-pairs
  pairwise
  N-wise
  2-wise
  3-wise
  two-wise
  three-wise
  N-term
  2-term
  3-term
  two-term
  three-term
  pairs
  pair
  combinatorial
  covering-array
  covering-arrays
  pict

description = It makes combinations covering pairs for pairwise testing.
long_description = file: README.rst
