[metadata]
name = covertable
version = 3.0.0rc1
author = righ
author_email = righ.m9@gmail.com
url = https://covertable.walkframe.com
license = Apache Software License
classifier = 
  Intended Audience :: Developers
  Intended Audience :: Information Technology
  Intended Audience :: Manufacturing
  Intended Audience :: Science/Research
  License :: OSI Approved :: Apache Software License
  Programming Language :: Python
  Topic :: Software Development
keywords = 
  allpair
  all-pair
  allpairs
  all-pairs
  pairwise
  N-wise
  2-wise
  3-wise
  two-wise
  three-wise
  N-term
  2-term
  3-term
  two-term
  three-term
  pairs
  pair
  combinatorial
  covering-array
  covering-arrays
  pict

description = Powerful pairwise testing library in Python, producing covering arrays that minimize test cases while respecting constraints.
long_description = file: README.rst
long_description_content_type = text/x-rst
